# dsu.tools

./: .gitignore  README.md  start-server.sh
database/: .gitignore  README.md  generate.sh
database/schemas/: generate.sql  test-users.sql
dsutools-backend/: Cargo.toml  README.md  Rocket.toml  client-server-api.md
dsutools-backend/src/: main.rs
dsutools-frontend/: README.md  colors.html  flashcards.html  index.html  irina.html  login.html  package-lock.json  package.json  register.html  vitamincalculator.html  vite.config.js
dsutools-frontend/src/: App.vue  Calculator.vue  Colors.vue  Header.vue  IrinaPage.vue  Login.vue  Register.vue  StudyBuddy.vue  VitaminCalculator.vue  colorUtils.js  colors.js  flashcards.js  irinapage.js  login.js  main.js  register.js  vitamincalculator.js
dsutools-frontend/src/assets/: base.css  colors.css  main.css
dsutools-frontend/src/components/: Box.vue  Calculator.vue  ColorSlider.vue  CopyableText.vue  DropDownSelect.vue  Flashcard.vue  Footer.vue  Header.vue  Page.vue  QuickLinks.vue  ToolButton.vue  ToolGrid.vue  ToolItem.vue  ToolTip.vue  Vitamin.vue  tool_grid.vue
dsutools-frontend/src/components/color-tool/: ColorInput.vue  ColorOutput.vue  ColorRow.vue  ColorSlider.vue  ColorSpaceSelector.vue  testComponent.vue
test-proj/: README.md  index.html  package-lock.json  package.json
test-proj/src/: App.vue  Calculator.vue  Notes.vue  main.ts
