[package]
name = "dsutools-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_sqlite"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
tracing = "0.1.4"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
argon2 = "0.5.3"
